syntax = "proto3";
package nexa.user.v1;
option go_package = "nexa/proto/generated/golang/user/v1";

import "google/protobuf/empty.proto";

service ProfileService {
  rpc Find(FindProfileRequest) returns (FindProfileResponse);
  rpc Update(UpdateProfileRequest) returns (google.protobuf.Empty);
  rpc UpdateAvatar(stream UpdateProfileAvatarRequest) returns (google.protobuf.Empty);
}

message FindProfileRequest {
  repeated string user_ids = 1;
}

message FindProfileResponse {
  repeated Profile profiles = 1;
}

message Profile {
//  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string bio = 4;
  string image_path = 5;
}

message UpdateProfileRequest {
  string user_id = 1;
  optional string first_name = 2;
  optional string last_name = 3;
  optional string bio = 4;
}

message UpdateProfileAvatarRequest {
  string user_id = 1;
  string filename = 2;
  bytes chunk = 3;
}